--- a/pages/pubRqTrade/index.wxml
+++ b/pages/pubRqTrade/index.wxml
@@ -6,7 +6,7 @@
 		</view>
 		<view class="pubForm padd">
 			<view class="pubItem">
-				<view class="pubTit"><text>*</text>公司名称</view>
+				<view class="pubTit"><text>*</text>贸易商名称</view>
 				<view class="selItem" bindtap="getCpyList">
 					<input placeholder="请选择公司" value="{{cpyName}}" disabled/>
 					<input type="text" name="cpyName" value="{{cpyId}}" hidden="{{true}}" diasbled/>
