--- a/pages/potTrade/index.wxml
+++ b/pages/potTrade/index.wxml
@@ -38,19 +38,21 @@
 				</block>
 			</view>
 			<view class="proDate">
-				<text>购置年份：{{item.buyYear}}</text>
+				<text>购置年份：{{item.buyYear}}年</text>
 			</view>
 			<view class="priceView clearfix">
 				<view>
 					<text class="priceTit">租卖价格:</text>
 					<text class="unit">¥</text>
 					<text class="priceNum">{{item.leasePrice}}</text>
+					<text class="unit">元</text>
 				</view>
 				<block wx:if="{{item.tradeStatus == 0}}">
 					<view>
 						<text class="priceTit">销售价格:</text>
 						<text class="unit">¥</text>
 						<text class="priceNum">{{item.sellPrice}}</text>
+						<text class="unit">元</text>
 					</view>
 				</block>
 				<i class="iconfont icon-gengduo"></i>
