--- a/pages/rqMySellerDet/index.wxml
+++ b/pages/rqMySellerDet/index.wxml
@@ -34,8 +34,8 @@
 		<image src="{{tradeDetData.userHead}}"></image>
 	</view>
 	<view class="telInfo">
-		<text>{{tradeDetData.lxName}}</text>
-		<text>{{tradeDetData.lxTel}}</text>
+		<view>{{tradeDetData.lxName}}</view>
+		<view>{{tradeDetData.lxTel}}</view>
 	</view>
 	<view class="phoneCall" bindtap="getPhoneCall" data-phone="{{tradeDetData.lxTel}}">
 		<i class="iconfont icon-tel"></i>
@@ -91,48 +91,11 @@
 		<view class="iconTxt">咨询</view>
 	</view> -->
 	<block wx:if="{{canByGasFlag}}">
-		<view class="buyGasBtn">我要买气</view>
+		<view class="buyGasBtn" bindtap="goBuyGas">我要买气</view>
 	</block>
 	<block wx:else>
-		<view class="notBuyGasBtn">我要买气</view>
+		<view class="notBuyGasBtn">已下单</view>
 	</block>
-</view>
-<!-- 买气弹窗 -->
-<view class="maskLayer" hidden="{{isShowLayerFlag}}"></view>
-<view class="buyGasView" hidden="{{isShowLayerFlag}}">
-	<view class="buyGasTit">请填写信息</view>
-	<view class="buyGasForm">
-		<form bindsubmit="formSubmit">
-			<view class="buyGasItem">
-				<view class="buyGasIcon">
-					<i class="iconfont icon-xingming"></i>
-				</view>
-				<input type="text" name="buyUserName" placeholder="请输入您的姓名" maxlength="6"/>
-			</view>
-			<view class="buyGasItem">
-				<view class="buyGasIcon">
-					<i class="iconfont icon-shouji"></i>
-				</view>
-				<input type="number" name="phoneNum" placeholder="请输入您的手机号码" maxlength="11"/>
-			</view>
-			<view class="buyGasItem">
-				<view class="buyGasIcon">
-					<i class="iconfont icon-psDizhi"></i>
-				</view>
-				<input type="text" name="psArea" placeholder="请输入您的配送地址(如实填写)" maxlength="50"/>
-			</view>
-			<view class="buyGasItem">
-				<view class="buyGasIcon">
-					<i class="iconfont icon-baojia"></i>
-				</view>
-				<input type="number" name="buyPrice" placeholder="请输入您的报价" maxlength="7"/>
-			</view>
-			<button class="subBtn" formType="submit">提交信息</button>
-		</form>
-	</view>
-	<view class="closeView">
-		<i class="iconfont icon-guanbi"></i>
-	</view>
 </view>
 <view class="noDataList" hidden="{{isHasDataFlag}}">
 	<image mode="widthFix" src="../../images/noData.png"></image>
